apps/services/firefox-sync/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefox-sync
  labels:
    name: firefox-sync
    app.kubernetes.io/part-of: services
