apps/services/firefox-sync/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefox-sync
  namespace: firefox-sync
  labels:
    app: firefox-sync
    app.kubernetes.io/name: firefox-sync
    app.kubernetes.io/part-of: services
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: firefox-sync
